# langgraph_deep_research_agent

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
notebook/: evals.ipynb  research_phase_evals.ipynb  test_models.ipynb
src/: graph.py  schema.py  state.py  utils.py
src/generate_report/: generate_report.py  prompt.py
src/nodes/: clarify_user_request.py  write_research_brief.py
src/research_agent/: agent.py  prompt.py  schema.py  state.py
src/research_agent/tools/tavily/: prompt.py  tavily.py  utils.py
src/research_agent/tools/think/: think.py
src/supervisor/: prompt.py  state.py  supervisor.py  tools.py  utils.py
